fix(): Add overflow hidden to menu fixed

--- a/scss/base/_geral.scss
+++ b/scss/base/_geral.scss
@@ -29,3 +29,7 @@
         flex-direction: row;
     }
 }
+
+.not-scroll {
+    overflow: hidden;
+}
